# seirtrichain

./: BITCOIN_FEATURES.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  GETTING_CONTRIBUTORS.md  P2P_NETWORK_SETUP.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY.md  SHORTCUTS.md  shortcuts.sh  siertrichain.db  temp_blockchain_test_fix.txt  temp_blockchain_update.sh  temp_fix_blockchain_helper.sh  temp_fix_blockchain_helper2.sh  temp_fix_transaction_tests.sh  temp_genesis_update.txt
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.css  Layout.tsx  Navigation.css  Navigation.tsx
dashboard/src/pages/: Blocks.tsx  Dashboard.css  Dashboard.tsx  Mining.tsx  Network.tsx  PageCommon.css  Transactions.tsx  Wallet.tsx
dashboard/src/types/: api.ts
scripts/: fix_blockchain.py  run_cargo.sh
src/: addressbook.rs  ai_validation.rs  api.rs  blockchain.rs  crypto.rs  error.rs  geometry.rs  lib.rs  main.rs  miner.rs  network.rs  persistence.rs  security.rs  transaction.rs  wallet.rs
