[package]
name = "siertrichain"
version = "0.1.0"
edition = "2021"

[lib]
name = "siertrichain"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["rand-std"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
hex = "0.4"

[[bin]]
name = "siertri-wallet"
path = "src/bin/siertri-wallet.rs"

[[bin]]
name = "siertri-miner"
path = "src/bin/siertri-miner.rs"
